--- a/src/sass/typography/_copy.scss
+++ b/src/sass/typography/_copy.scss
@@ -5,7 +5,7 @@ blockquote {
 	line-height: 1.3;
 	text-align: center;
 	max-width: 1000px;
-	margin: 0 auto;
+	margin: 0 auto 1.6rem;
 
 	footer {
 		font-size: 1.2rem;
